@@ -2,6 +2,7 @@
 
 = 2.0.0 - 2021-xx-xx =
 * Update - Render customer details in transactions list as text instead of link if order missing.
+* Update - Improvements to fraud prevention.
 
 = 1.9.2 - 2021-xx-xx =
 * Fix - Added better notices for end users if there are connection errors when making payments.
